style.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;

  display: flex;
  flex-direction: column;
  align-items: center;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}


.row div {
    display: flex;
    justify-content: center;
    height: 100px;
}

.box {
  background-color: rgb(52, 103, 212);
    width: 100px;
    height: 100%;
    cursor: pointer;
}

.cont {
    border: 4px solid rgb(177, 177, 177);
}

.lev {
  display: none;
}

main {
    width: 900px;
}

.startButt {
  width: 100px;
  height: 50px;
  border-radius: 5px;
  border-color: rgb(166, 166, 244);
  margin: 20px;
  font-weight: bold;
}

@media screen and (max-width: 768px) {

.row div {
    display: flex;
    justify-content: center;
    height: 50px;
}

.box {
    background: blue;
    width: 50px;
    height: 100%;
}
.cont {
    width: 100px;
}

main {
    width: 500px;
}
}

.signal {
      /* background-color: rgb(15, 209, 105); */
      /* background: linear-gradient(160deg, rgb(21, 232, 255), rgb(92, 92, 133)); */
        background: radial-gradient(circle,  rgb(21, 232, 255), rgb(92, 92, 133));
      border: 2px solid rgb(8, 101, 177);
}

.beep {
      border: 4px solid rgb(0, 162, 255);
}

.good {
        border: 4px solid rgb(41, 219, 44);
}

.bad {
          border: 4px solid rgb(255, 71, 71);
}


.statbar {
  display:none;
}

.atts {
  display:none;
}

.tryAgainmsg {
  display:none;
}

